Background-image z-index fix

--- a/src/public/sass/mqSpecific/desktop.scss
+++ b/src/public/sass/mqSpecific/desktop.scss
@@ -50,7 +50,7 @@ nav {
     top: 0;
     bottom: 0;
     height: 100%;
-    z-index: 0;
+    z-index: 2;
     right: 0;
     left: $homepageLeftColWidth;
     float: none;
